dc/dc-service.yml
apiVersion: v1
kind: Service
metadata:
   name: xxx-dc
   labels:
     name: xxx-dc
     app: dc
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: dc
